--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="title">TITLE</string>
     <string name="note">NOTE</string>
     <string name="delete">Delete</string>
+    <string name="singleoptionselected">singleOptionSelected</string>
+    <string name="add_to_archive">Add to Archive</string>
+    <string name="remove_from_archive">Remove from Archive</string>
 </resources>
