Added work in progress on all fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,8 @@
     <string name="my_notes">My Notes</string>
     <string name="personal_notes">Personal Notes</string>
     <string name="tasks">Tasks</string>
-    <string name="upcoming_alarms">Upcoming Alarms</string>
+    <string name="upcoming_alarms">Alarms</string>
     <string name="settings">Settings</string>
+    <string name="add_task">Add Task</string>
+    <string name="work_under_progress">work_under_progress</string>
 </resources>
